--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="socials">
                 <a href="https://www.linkedin.com/in/tarcio-poggio/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/PoggioT" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="mailto:contato@poggio.dev"><i class='bx bx-envelope'></i></a>
+                <a href="mailto:tarcinho2001@gmail.com"><i class='bx bx-envelope'></i></a>
             </div>
         </div>
     </section>
