--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="hero">
         <div class="hero-content fade-in">
             <img src="imagens/logo.png" alt="Logo de Poggio IT" class="avatar">
-            <h2>Bem-vindo à <span>Minha História</span></h2>
+            <h2>Bem vindo ao <span>Meu Portfólio</span></h2>
             <p>Transformando ideias em soluções digitais</p>
             <a href="#about" class="btn">Saiba Mais</a>
         </div>
@@ -55,6 +55,9 @@
                 <div class="card"><i class='bx bxl-java'></i><p>Java</p></div>
                 <div class="card"><i class='bx bx-network-chart'></i><p>N8N & Integrações</p></div>
                 <div class="card"><i class='bx bxs-brain'></i><p>Inteligência Artificial</p></div>
+                <div class="card"><i class='bx bxl-docker'></i><p>Docker</p></div>
+                <div class="card"><i class='bx bxl-git'></i><p>Git</p></div>
+                <div class="card"><i class='bx bxl-postgresql'></i><p>PostgreSQL</p></div>
             </div>
         </div>
     </section>
