troca de email, para whatsapp

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="socials">
                 <a href="https://www.linkedin.com/in/tarcio-poggio/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/PoggioT" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="mailto:tarcinho2001@gmail.com"><i class='bx bx-envelope'></i></a>
+                <a href="https://wa.me/5571996691916?text=Olá,%20tudo%20bem?%20Gostaria%20de%20mais%20informações." target="_blank"><i class='bx bxl-whatsapp'></i></a>
             </div>
         </div>
     </section>
