--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Poggio IT - Todos os direitos reservados</p>
+        <p>© 2025 Tarcio Poggio - Todos os direitos reservados</p>
     </footer>
 
 </body>
