--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="contact" class="section slide-up">
         <div class="container">
             <h2>Contato</h2>
-            <form class="contact-form">
+            <form id="contact-form" class="contact-form">
                 <input type="text" name="user_name" placeholder="Seu Nome" required>
                 <input type="email" name="user_email" placeholder="Seu Email" required>
                 <textarea name="message" placeholder="Sua Mensagem" required></textarea>
