--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <h2>Minhas Habilidades</h2>
             <div class="skills-grid">
-                <div class="card"><i class='bx bxl-html5'></i><p>HTML5</p></div>
+                <div class="card"><i class='bx bxl-html5'></i><p>HTML</p></div>
                 <div class="card"><i class='bx bxl-css3'></i><p>CSS</p></div>
                 <div class="card"><i class='bx bxl-javascript'></i><p>JavaScript</p></div>
                 <div class="card"><i class='bx bxl-python'></i><p>Python</p></div>
@@ -93,8 +93,8 @@
 
 
             <div class="socials">
-                <a href="https://www.linkedin.com/in/tarcio-poggio/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/PoggioT" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/tarcio-poggio/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://wa.me/5571996691916?text=Olá,%20tudo%20bem?%20Gostaria%20de%20mais%20informações." target="_blank"><i class='bx bxl-whatsapp'></i></a>
             </div>
         </div>
