--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <script src="script.js" defer></script>
-    <link rel="icon" href="imagens/logo.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="imagens/logo.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="imagens/logoteste.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="imagens/logoteste.png" sizes="16x16" type="image/png">
 </head>
 
 <body>
