--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </div>
     </header>
 
+
+
     <section id="hero">
         <div class="hero-content fade-in">
             <img src="imagens/logo.png" alt="Logo de Poggio IT" class="avatar">
@@ -44,6 +46,8 @@
             </div>
         </div>
     </section>
+
+
 
     <section id="skills" class="section fade-in">
     <div class="container">
@@ -73,6 +77,7 @@
                 <i class='bx bxs-server'></i>
                 <p>Bancos de Dados</p>
                 <div id="database-skills" class="skills-container hidden">
+                    <div class="skill-item"><i class='bx bxs-cloud-upload'></i><p>MySQL</p></div>
                     <div class="skill-item"><i class='bx bxl-postgresql'></i><p>PostgreSQL</p></div>
                     </div>
             </div>
@@ -90,6 +95,8 @@
         </div>
     </div>
     </section>
+
+
 
     <section id="contact" class="section slide-up">
         <div class="container">
@@ -119,7 +126,6 @@
                 });
             </script>
 
-
             <div class="socials">
                 <a href="https://github.com/PoggioT" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="https://www.linkedin.com/in/tarcio-poggio/" target="_blank"><i class='bx bxl-linkedin'></i></a>
@@ -128,9 +134,13 @@
         </div>
     </section>
 
+
+
     <footer>
         <p>© 2025 Tarcio Poggio - Todos os direitos reservados</p>
     </footer>
+
+
 
 </body>
 </html>
