sobre-mim aprimoramento

--- a/index.html
+++ b/index.html
@@ -37,15 +37,18 @@
     </section>
 
     <section id="about" class="section slide-up">
-        <div class="container about">
-            <div>
-                <h2>Sobre Mim</h2>
-                <p>
-                    Sou <span>Tarcio Poggio</span>, um desenvolvedor apaixonado por criar pontes entre tecnologia e necessidades do negócio. Minha expertise abrange áreas-chave como programação, integração de sistemas e inteligência artificial. Acredito que a automação e a inovação são ferramentas essenciais para transformar desafios em soluções digitais que não apenas funcionam, mas que também são inteligentes, escaláveis e duradouras.
-                </p>
-            </div>
+    <div class="container about">
+        <div>
+            <h2 class="titulo">Sobre Mim</h2>
+            <p class="codigo">
+                <span class="azul">const</span> <span class="verde">tarcioPoggio</span> = { <br>
+                &nbsp;&nbsp;<span class="roxo">texto</span>: "Sou um desenvolvedor full-stack que transforma desafios em soluções eficientes. Minha expertise se concentra na criação de sistemas integrados, desde a base de dados até a interface do usuário, com um olhar especial para a automação e a inteligência artificial.
+Meu objetivo é simples: utilizar a tecnologia para otimizar processos e gerar resultados tangíveis. Não se trata apenas de código, mas de construir ferramentas que fazem a diferença, oferecendo desempenho, escalabilidade e valor real.", <br>
+                };<span class="cursor">_</span>
+            </p>
         </div>
-    </section>
+    </div>
+</section>
 
 
 
