--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             </script>
 
             <div class="socials">
-                <a href="https://github.com/PoggioT" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="https://www.linkedin.com/in/tarcio-poggio/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://wa.me/5571996691916?text=Olá,%20tudo%20bem?%20Gostaria%20de%20mais%20informações." target="_blank"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://github.com/PoggioT" target="_blank"><i class='bx bxl-github' rel="noopener noreferrer"></i></a>
+                <a href="https://www.linkedin.com/in/tarcio-poggio/" target="_blank"><i class='bx bxl-linkedin' rel="noopener noreferrer"></i></a>
+                <a href="https://wa.me/5571996691916?text=Olá,%20tudo%20bem?%20Gostaria%20de%20mais%20informações." target="_blank"><i class='bx bxl-whatsapp' rel="noopener noreferrer"></i></a>
             </div>
         </div>
     </section>
