--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <section id="projects" class="section slide-up">
         <div class="container">
             <h2>Projetos Pessoais</h2>
+            <p>In progress<span class="cursor">_</span></p>
         </div>
     </section>
 
