--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <script src="script.js" defer></script>
-    <link rel="icon" href="imagens/logoteste.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="imagens/logoteste.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="imagens/logo2.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="imagens/logo2.png" sizes="16x16" type="image/png">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <img src="imagens/logo.png" alt="Logo de Poggio IT" class="site-logo">
+            <img src="imagens/logotransp.png" alt="Logo de Poggio IT" class="site-logo">
             <nav>
                 <ul class="menu">
                     <li><a href="#skills">Habilidades</a></li>
@@ -29,8 +29,8 @@
 <!-- HERO -->
     <section id="hero">
         <div class="hero-content fade-in">
-            <img src="imagens/logo.png" alt="Logo de Poggio IT" class="avatar">
-            <h2>Bem vindo ao <span>Meu Portfólio</span></h2>
+            <img src="imagens/logo2.png" alt="Logo de Poggio IT" class="avatar">
+            <h2>Bem vindo ao meu <span>Portfólio</span></h2>
             <p>Transformando ideias em soluções digitais</p>
             <a href="#about" class="btn">Saiba Mais</a>
         </div>
