--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
             <h2 class="titulo">Sobre Mim</h2>
             <p class="codigo">
                 <span class="azul">const</span> <span class="verde">tarcioPoggio</span> = { <br>
-                &nbsp;&nbsp;<span class="roxo">texto</span>: "Sou um desenvolvedor full-stack que transforma desafios em soluções eficientes. Minha expertise se concentra na criação de sistemas integrados, desde a base de dados até a interface do usuário, com um olhar especial para a automação e a inteligência artificial.
-                
-                Meu objetivo é simples: utilizar a tecnologia para otimizar processos e gerar resultados tangíveis. Não se trata apenas de código, mas de construir ferramentas que fazem a diferença, oferecendo desempenho, escalabilidade e valor real.", <br>
+                &nbsp;&nbsp;<span class="roxo">texto</span>: "Transformo desafios em soluções tecnológicas eficientes. Como desenvolvedor, construo sistemas integrados com foco em performance, escalabilidade e na aplicação de automação e inteligência artificial para gerar resultados de negócio. Sempre aprimorando meu conhecimento em IA com foco em automações." <br>
                 };<span class="cursor">_</span>
             </p>
         </div>
