texto sobre mim

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2 class="titulo">Sobre Mim</h2>
             <p class="codigo">
                 <span class="azul">const</span> <span class="verde">tarcioPoggio</span> = { <br>
-                &nbsp;&nbsp;<span class="roxo">texto</span>: "Transformo desafios em soluções tecnológicas eficientes. Como desenvolvedor, construo sistemas integrados com foco em performance, escalabilidade e na aplicação de automação e inteligência artificial para gerar resultados de negócio. Sempre aprimorando meu conhecimento em IA com foco em automações." <br>
+                &nbsp;&nbsp;<span class="roxo">texto</span>: "Desenvolvedor especializado em criar soluções tecnológicas eficientes, com foco em performance, escalabilidade e automação. Atuo no desenvolvimento de sistemas integrados e na aplicação de inteligência artificial para otimizar processos e gerar valor ao negócio. Está em constante aprimoramento em IA, com ênfase em automações inteligentes." <br>
                 };<span class="cursor">_</span>
             </p>
         </div>
