adicao-aba-projetos

--- a/index.html
+++ b/index.html
@@ -106,11 +106,45 @@
 
 <!-- PROJETOS -->
     <section id="projects" class="section slide-up">
-        <div class="container">
-            <h2>Projetos Pessoais</h2>
-            <p>In progress<span class="cursor">_</span></p>
+    <div class="container">
+        <h2>Projetos Pessoais</h2>
+        <p>Interaja para saber mais</p>
+        <div class="project-grid">
+
+            <div class="project-card">
+                <img src="imagens/derpbarlogo.png" alt="Imagem do Projeto 1">
+                <div class="project-info">
+                    <h3>Derpbar | Contatos</h3>
+                    <p>Site one-page responsivo, criado como um cartão de visitas digital para a empresa DerpBar. Desenvolvido com HTML, CSS e JavaScript, focado em um design limpo, interatividade e uma experiência de usuário intuitiva em qualquer dispositivo.</p>
+                    <div class="project-tags">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/PoggioT/DerpBar" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i> Código</a>
+                        <a href="https://poggiot.github.io/DerpBar/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i> Demo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <img src="imagens/progress.png" alt="Imagem do Projeto 1">
+                <div class="project-info">
+                    <h3></h3>
+                    <p>In Progress...</p>
+                    <div class="project-tags">
+                        <span></span>
+                    </div>
+                    <div class="project-links">
+
+                    </div>
+                </div>
+            </div>
+            
         </div>
-    </section>
+    </div>
+</section>
 
 
 
