estetica-sobre-mim

--- a/index.html
+++ b/index.html
@@ -78,13 +78,23 @@
                         <div class="skill-item"><i class='bx bxl-java'></i><p>Java</p></div>
                     </div>
             </div>
-            
+
+            <div class="category-card" onclick="toggleSkills('automation')">
+                <i class='bx  bxs-bot'></i> 
+                <p>Automação</p>
+                <div id="automation-skills" class="skills-container hidden">
+                    <div class="skill-item"><i class='bx bx-network-chart'></i><p>N8N & Integrações</p></div>
+                    <div class="skill-item"><i class='bx bxs-dashboard'></i><p>EasyPanel</p></div>
+                </div>
+                
+            </div>
             <div class="category-card" onclick="toggleSkills('database')">
                 <i class='bx bxs-server'></i>
                 <p>Bancos de Dados</p>
                 <div id="database-skills" class="skills-container hidden">
                     <div class="skill-item"><i class='bx bxs-cloud-upload'></i><p>MySQL</p></div>
                     <div class="skill-item"><i class='bx bxl-postgresql'></i><p>PostgreSQL</p></div>
+                    <div class="skill-item"><i class='bx bxl-docker'></i><p>Docker</p></div>
                 </div>
             </div>
 
@@ -93,8 +103,6 @@
                 <p>Ferramentas</p>
                 <div id="tools-skills" class="skills-container hidden">
                     <div class="skill-item"><i class='bx bxs-brain'></i><p>Inteligência Artificial</p></div>
-                    <div class="skill-item"><i class='bx bx-network-chart'></i><p>N8N & Integrações</p></div>
-                    <div class="skill-item"><i class='bx bxl-docker'></i><p>Docker</p></div>
                     <div class="skill-item"><i class='bx bxl-git'></i><p>Git</p></div>
                 </div>
             </div>
