--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <div class="skill-item"><i class='bx bx-network-chart'></i><p>N8N & Integrações</p></div>
                     <div class="skill-item"><i class='bx bxs-dashboard'></i><p>EasyPanel</p></div>
                 </div>
+
                 
             </div>
             <div class="category-card" onclick="toggleSkills('database')">
@@ -137,12 +138,30 @@
             </div>
 
             <div class="project-card">
-                <img src="imagens/progress.png" alt="Imagem do Projeto 1">
+                <img src="imagens/ia-pricing.png" alt="Imagem do Projeto 1">
                 <div class="project-info">
-                    <h3></h3>
-                    <p>In Progress...</p>
+                    <h3>Automação | Pricing</h3>
+                    <p>A partir de uma única entrada de dados (formulário), o workflow identifica para qual marketplace o preço deve ser calculado (TikTok, Shopee, Amazon, ML, etc.). Em seguida, ele direciona o produto para uma "esteira" dedicada, que aplica as regras de comissão e frete específicas daquele canal, calculando o preço de venda final ideal e lucrativo.</p>
                     <div class="project-tags">
-                        <span></span>
+                        <span>n8n</span>
+                        <span>APIs</span>
+                        <span>Bling</span>
+                    </div>
+                    <div class="project-links">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <img src="imagens/ai-atendimento.png" alt="Imagem do Projeto 1">
+                <div class="project-info">
+                    <h3>A.I | Atendimento</h3>
+                    <p>O sistema recebe e processa qualquer tipo de mensagem (texto, áudio, imagem ou documento). Uma IA central identifica a necessidade do usuário e, em seguida, roteia a conversa para o assistente de IA especialista da unidade correta a depender da necessidade, garantindo um atendimento preciso e contextualizado.</p>
+                    <div class="project-tags">
+                        <span>n8n</span>
+                        <span>APIs</span>
+                        <span>Evolution</span>
                     </div>
                     <div class="project-links">
 
