--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>Automação</p>
                 <div id="automation-skills" class="skills-container hidden">
                     <div class="skill-item"><i class='bx bx-network-chart'></i><p>N8N & Integrações</p></div>
-                    <div class="skill-item"><i class='bx bxs-dashboard'></i><p>EasyPanel</p></div>
+                    <div class="skill-item"><i class='bx bxs-dashboard'></i><p>Infra-Estrutura</p></div>
                 </div>
 
                 
