--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <section id="projects" class="section slide-up">
     <div class="container">
         <h2>Projetos Pessoais</h2>
-        <p>Interaja para saber mais</p>
+        <p>Interaja para saber mais!</p>
         <div class="project-grid">
 
             <div class="project-card">
